@@ -1,5 +1,13 @@
 2005-05-09 Braden McDaniel  <braden@endoframe.com>
 
+	* src/libopenvrml/Makefile.am:  Link with libboost_regex.
+	* src/libopenvrml/openvrml/browser.cpp:  Replaced Spirit URI
+	parser with boost::regex.  Alas, Spirit parsers are not thread-
+	safe.  (More accurately, certain Spirit constructs are not
+	thread-safe, including ones OpenVRML was using.)
+
+2005-05-09 Braden McDaniel  <braden@endoframe.com>
+
 	Protect openvrml::scene::url_ with a separate mutex.
 
 	* src/libopenvrml/openvrml/browser.cpp
